--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       ctx.moveTo(75, 50);
       ctx.moveTo(100, 75);
       ctx.moveTo(100, 25);
-      ctx.fill;
+      ctx.fill();
       }
     }
     draw();
