--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <html>
-  <head>
+    <head>
     
-  </head>
+    </head>
   
-  <body>
-    <canvas id="canvas" width="150" height="150"></canvas>
-    <script type="application/javascript">
-    function draw() {
-    const canvas = document.getElementById("canvas");
-    if (canvas.getContext) {
-    const ctx = canvas.getContext("2d");
-    ctx.fillStyle = "rgb(0, 255, 200)";
-    ctx.fillRect(10, 10, 60, 60);
-    ctx.fillStyle = "rgb(200, 0, 50)";
-    ctx.fillRect(70, 70, 60, 60);
+    <body>
+        <canvas id="canvas" width="150" height="150"></canvas>
+        <script type="application/javascript">
+            function draw() {
+            const canvas = document.getElementById("canvas");
+            if (canvas.getContext) {
+            const ctx = canvas.getContext("2d");
+            ctx.fillStyle = "rgb(50, 50, 200)";
+            ctx.fillRect(10, 10, 150, 100);
+
+            ctx.fillStyle = "rgb(200, 50, 50)";
+            const circle = new Path2d();
+            circle.arc(200, 200, 50, 0, 360);
+            circle.fill();
 
       // ctx.beginPath();
       // ctx.moveTo(75, 50);
