--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             ctx.fillStyle = "rgb(50, 50, 200)";
             ctx.fillRect(10, 10, 150, 100);
 
-            ctx.fillStyle = "rgb(200, 50, 50)";
-            const circle = new Path2d();
-            circle.arc(200, 200, 50, 0, 360);
-            circle.fill();
+            // ctx.fillStyle = "rgb(200, 50, 50)";
+            // const circle = new Path2d();
+            // circle.arc(200, 200, 50, 0, 360);
+            // circle.fill();
 
       // ctx.beginPath();
       // ctx.moveTo(75, 50);
