--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             const ctx = canvas.getContext("2d");
             ctx.fillStyle = "rgb(50, 200, 200)";
             ctx.fillRect(10, 10, 150, 100);
-
+            
             ctx.fillStyle = "rgb(200, 50, 50)";
             const circle = new Path2d();
-            circle.arc(200, 200, 50, 0, 360);
+            circle.arc(200, 200, 50, 0, 360, false);
             circle.fill(circle);
 
       // ctx.beginPath();
