--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             
             ctx.fillStyle = "rgb(200, 50, 50)";
             const circle = new Path2d();
-            circle.arc(200, 200, 50, 0, 360, false);
+            circle.arc(200, 200, 50, 0, 2 * Math.PI);
             circle.fill(circle);
 
       // ctx.beginPath();
