--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             ctx.fillRect(10, 10, 150, 100);
             
             ctx.fillStyle = "rgb(200, 50, 50)";
-            const circle = new Path2d();
-            circle.arc(200, 200, 50, 0, 2 * Math.PI);
-            circle.fill(circle);
+            // const circle = new Path2d();
+            ctx.arc(200, 200, 50, 0, 2 * Math.PI);
+            ctx.fill();
 
       // ctx.beginPath();
       // ctx.moveTo(75, 50);
