--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             const canvas = document.getElementById("canvas");
             if (canvas.getContext) {
             const ctx = canvas.getContext("2d");
-            ctx.fillStyle = "rgb(50, 200, 200)";
-            ctx.fillRect(10, 10, 150, 100);
+            // ctx.fillStyle = "rgb(50, 200, 200)";
+            // ctx.fillRect(10, 10, 150, 100);
             
             ctx.fillStyle = "rgb(200, 50, 50)";
             // const circle = new Path2d();
