--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             
             ctx.fillStyle = "rgb(200, 50, 50)";
             // const circle = new Path2d();
+            ctx.beginpath();
             ctx.arc(200, 200, 50, 0, 2 * Math.PI);
             ctx.fill();
 
