--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
             // ctx.fillStyle = "rgb(50, 200, 200)";
             // ctx.fillRect(10, 10, 150, 100);
             
-            ctx.fillStyle = "rgb(200, 50, 50)";
-            // const circle = new Path2d();
-            ctx.beginpath();
-            ctx.arc(200, 200, 50, 0, 2 * Math.PI);
-            ctx.fill();
+            ctx.beginPath();
+            ctx.arc(100, 75, 50, 0, 2 * Math.PI);
+            ctx.stroke();
 
       // ctx.beginPath();
       // ctx.moveTo(75, 50);
