--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             ctx.fillStyle = "rgb(50, 200, 200)";
             ctx.fillRect(10, 10, 150, 100);
 
-            ctx.fillStyle = "rgb(200, 50, 50)";
+            // ctx.fillStyle = "rgb(200, 50, 50)";
             ctx.beginPath();
             ctx.arc(200, 50, 50, 0, 2 * Math.PI);
             ctx.fill();
