--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
             ctx.arc(250, 75, 50, 0, 2 * Math.PI);
             ctx.fill();
 
+            ctx.fillStyle = "rgb(50, 200, 50)";
+			ctx.beginPath();
+            ctx.moveTo(100, 200);
+            ctx.lineTo(150, 120);
+  			ctx.lineTo(200, 200);
+            ctx.fill();
+
       // ctx.beginPath();
       // ctx.moveTo(75, 50);
       // ctx.moveTo(100, 75);
